# NeoProphet

./: main.py  pyproject.toml
notebooks/: additional_topics.ipynb  diagnostics.ipynb  handling_shocks.ipynb  multiplicative_seasonality.ipynb  non-daily_data.ipynb  outliers.ipynb  quick_start.ipynb  saturating_forecasts.ipynb  seasonality,_holiday_effects,_and_regressors.ipynb  trend_changepoints.ipynb  uncertainty_intervals.ipynb
python/: setup.py
python/prophet/: __init__.py  diagnostics.py  forecaster.py  make_holidays.py  models.py  plot.py  serialize.py  utilities.py
python/prophet/tests/: conftest.py  test_diagnostics.py  test_prophet.py  test_serialize.py
python/scripts/: generate_holidays_file.py
python/stan/: prophet.stan
python_shim/: setup.py
python_shim/fbprophet/: __init__.py
python_shim/fbprophet/tests/: test_package.py
