[project]
name = "neoprophet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.2.3",
    "ruff>=0.9.7",
    "tqdm>=4.67.1",
]
[tool.uv]
cache-dir = "./.uv_cache"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
